make the build passing with javac -Xdoclint:all,-missing
(+remaining static access related warnings)

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>